Updated Button Delay Files

--- a/Button Based Delay/MSP430FR2311/ButtonBasedDelayFR/.project
+++ b/Button Based Delay/MSP430FR2311/ButtonBasedDelayFR/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ButtonBlinkFR2311</name>
+	<name>ButtonBasedDelayFR</name>
 	<comment></comment>
 	<projects>
 	</projects>
