--- a/Button Based Delay/MSP430FR2311/ButtonBasedDelayFR/Debug/makefile
+++ b/Button Based Delay/MSP430FR2311/ButtonBasedDelayFR/Debug/makefile
@@ -10,7 +10,7 @@ GEN_OPTS__FLAG :=
 GEN_CMDS__FLAG := 
 
 ORDERED_OBJS += \
-"./blink.obj" \
+"./main.obj" \
 "../lnk_msp430fr2311.cmd" \
 $(GEN_CMDS__FLAG) \
 -llibc.a \
@@ -120,42 +120,42 @@ endif
 
 # Add inputs and outputs from these tool invocations to the build variables 
 EXE_OUTPUTS += \
-ButtonBlinkFR2311.out \
+ButtonBasedDelayFR.out \
 
 EXE_OUTPUTS__QUOTED += \
-"ButtonBlinkFR2311.out" \
+"ButtonBasedDelayFR.out" \
 
 BIN_OUTPUTS += \
-ButtonBlinkFR2311.hex \
+ButtonBasedDelayFR.hex \
 
 BIN_OUTPUTS__QUOTED += \
-"ButtonBlinkFR2311.hex" \
+"ButtonBasedDelayFR.hex" \
 
 
 # All Target
 all: $(OBJS) $(CMD_SRCS) $(GEN_CMDS)
-	@$(MAKE) --no-print-directory -Onone "ButtonBlinkFR2311.out"
+	@$(MAKE) --no-print-directory -Onone "ButtonBasedDelayFR.out"
 
 # Tool invocations
-ButtonBlinkFR2311.out: $(OBJS) $(CMD_SRCS) $(GEN_CMDS)
+ButtonBasedDelayFR.out: $(OBJS) $(CMD_SRCS) $(GEN_CMDS)
 	@echo 'Building target: "$@"'
 	@echo 'Invoking: MSP430 Linker'
-	"C:/ti/ccsv8/tools/compiler/ti-cgt-msp430_18.1.2.LTS/bin/cl430" -vmspx --use_hw_mpy=none --advice:power=all --advice:hw_config=all --define=__MSP430FR2311__ -g --printf_support=minimal --diag_warning=225 --diag_wrap=off --display_error_number --silicon_errata=CPU21 --silicon_errata=CPU22 --silicon_errata=CPU40 -z -m"ButtonBlinkFR2311.map" --heap_size=160 --stack_size=160 --cinit_hold_wdt=on -i"C:/ti/ccsv8/ccs_base/msp430/include" -i"C:/ti/ccsv8/tools/compiler/ti-cgt-msp430_18.1.2.LTS/lib" -i"C:/ti/ccsv8/tools/compiler/ti-cgt-msp430_18.1.2.LTS/include" --reread_libs --diag_wrap=off --display_error_number --warn_sections --xml_link_info="ButtonBlinkFR2311_linkInfo.xml" --use_hw_mpy=none --rom_model -o "ButtonBlinkFR2311.out" $(ORDERED_OBJS)
+	"C:/ti/ccsv8/tools/compiler/ti-cgt-msp430_18.1.2.LTS/bin/cl430" -vmspx --use_hw_mpy=none --advice:power=all --advice:hw_config=all --define=__MSP430FR2311__ -g --printf_support=minimal --diag_warning=225 --diag_wrap=off --display_error_number --silicon_errata=CPU21 --silicon_errata=CPU22 --silicon_errata=CPU40 -z -m"ButtonBasedDelayFR.map" --heap_size=160 --stack_size=160 --cinit_hold_wdt=on -i"C:/ti/ccsv8/ccs_base/msp430/include" -i"C:/ti/ccsv8/tools/compiler/ti-cgt-msp430_18.1.2.LTS/lib" -i"C:/ti/ccsv8/tools/compiler/ti-cgt-msp430_18.1.2.LTS/include" --reread_libs --diag_wrap=off --display_error_number --warn_sections --xml_link_info="ButtonBasedDelayFR_linkInfo.xml" --use_hw_mpy=none --rom_model -o "ButtonBasedDelayFR.out" $(ORDERED_OBJS)
 	@echo 'Finished building target: "$@"'
 	@echo ' '
 
-ButtonBlinkFR2311.hex: $(EXE_OUTPUTS)
+ButtonBasedDelayFR.hex: $(EXE_OUTPUTS)
 	@echo 'Building files: $(strip $(EXE_OUTPUTS__QUOTED))'
 	@echo 'Invoking: MSP430 Hex Utility'
-	"C:/ti/ccsv8/tools/compiler/ti-cgt-msp430_18.1.2.LTS/bin/hex430" --memwidth=8 --romwidth=8 -o "ButtonBlinkFR2311.hex" $(EXE_OUTPUTS__QUOTED)
+	"C:/ti/ccsv8/tools/compiler/ti-cgt-msp430_18.1.2.LTS/bin/hex430" --memwidth=8 --romwidth=8 -o "ButtonBasedDelayFR.hex" $(EXE_OUTPUTS__QUOTED)
 	@echo 'Finished building: $(strip $(EXE_OUTPUTS__QUOTED))'
 	@echo ' '
 
 # Other Targets
 clean:
 	-$(RM) $(BIN_OUTPUTS__QUOTED)$(EXE_OUTPUTS__QUOTED)
-	-$(RM) "blink.obj" 
-	-$(RM) "blink.d" 
+	-$(RM) "main.obj" 
+	-$(RM) "main.d" 
 	-@echo 'Finished clean'
 	-@echo ' '
 
